# pyxbyak

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  pymain.cpp
test/: test_basic.py
